Add files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 __pycache__
+adjust_results4_isadog_hints.py
+calculates_results_stats_hints.py
+classify_images_hints.py
+get_input_args_hints.py
+get_pet_labels_hints.py
+print_results_hints.py
